third push after adding project to cloud

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>HRT Static Webpage Example</title>
 </head>
 <body>
- <b id="ex_content">The content of the document... </b>
+ <b id="ex_content">Finito.. </b>
 </body>
 </html>
